--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
            
             <p class="apresentacao__conteudo__texto"> This page was created for a construction company in Canada. Focusing on your services and contacts for a possible quote.</p>
 
-            <a class="projetos_link" href="https://beugenio10.github.io/New-Portfolio/about.html">Portfolio</a>
+            <a class="projetos_link" href="https://beugenio10.github.io/New-Portfolio/">Portfolio</a>
 
             <p class="apresentacao__conteudo__texto">
                 My professional summarizes.
